Settings: Lock before unlock the new way (2/2)
for more information see fb commit please.
target selection if lock before unlock is activated
will be enabled and shows the repective settings dependend
on if it is a phone or tablet

Change-Id: I6bb41539383c2b02b62354b00c773505f396028e

Conflicts:
	res/values/slim_strings.xml
	res/xml/security_settings_biometric_weak.xml
	res/xml/security_settings_password.xml
	res/xml/security_settings_pattern.xml
	res/xml/security_settings_pin.xml
	src/com/android/settings/SecuritySettings.java

--- a/res/values/graviton_strings.xml
+++ b/res/values/graviton_strings.xml
@@ -58,4 +58,8 @@
     <string name="notification_custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
     <string name="notification_custom_carrier_label_notset">Custom label currently not set</string>
 
+    <!-- Lock before unlock -->
+    <string name="lock_before_unlock_title">Show slider before unlock</string>
+    <string name="lock_before_unlock_summary">Show slider lockscreen before secure unlock mechanism</string>
+
 </resources>
