Apps: Add blacklist interface [2/2]
Now with 100% more hidden checkboxes

Signed-off-by: Evan Anderson <evan@thelinuxman.us>
Change-Id: Ied375cfe2ff6494c25acb9d80b19e824daed755d

Conflicts:
	res/values/pa_strings.xml
	src/com/android/settings/applications/InstalledAppDetails.java

--- a/res/values/graviton_strings.xml
+++ b/res/values/graviton_strings.xml
@@ -102,4 +102,8 @@
     <string name="navigation_bar_size_42_dp">42 dp</string>
     <string name="navigation_bar_size_0_dp">0 dp (off)</string>
 
+    <!--Blacklist-->
+    <string name="blacklist_button_title">Blacklist</string>
+    <string name="floating_blacklist_label">Blacklist from Floating Mode</string>
+
 </resources>
