--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -38,6 +38,12 @@
             android:entryValues="@array/lockscreen_battery_status_values"
             android:defaultValue="0" />
 
+	<PreferenceScreen
+	    android:key="lockscreen_notifications"
+            android:title="@string/lockscreen_notifications"
+	    android:summary="@string/lockscreen_notification_summary"
+            android:fragment="com.android.settings.graviton.LockscreenNotifications" />
+
         <Preference
             android:fragment="com.android.settings.cyanogenmod.LockscreenTargets"
             android:key="lockscreen_targets"
