--- a/res/layout/lockscreen_targets.xml
+++ b/res/layout/lockscreen_targets.xml
@@ -25,7 +25,8 @@
     <com.android.internal.widget.multiwaveview.GlowPadView
         android:id="@+id/lock_target"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+	android:layout_marginTop="96dp"
         android:layout_weight="0.6"
         android:orientation="horizontal"
         android:gravity="top"
