--- a/res/values/graviton_strings.xml
+++ b/res/values/graviton_strings.xml
@@ -51,4 +51,11 @@
     <string name="privacy_mode">Privacy Mode</string>
     <string name="privacy_mode_summary">Disables notifications from being shown and dismissed. This way, you just see the icons of your notifications.</string>
 
+    <!--Custom carrier label-->
+    <string name="notification_carrier_label_title">Carrier label</string>
+    <string name="notification_carrier_label_summary">Customize carrier label text for lockscreen and notification drawer. Leave text field blank for stock carrier name.</string>
+    <string name="notification_custom_carrier_label_title">Custom carrier label</string>
+    <string name="notification_custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
+    <string name="notification_custom_carrier_label_notset">Custom label currently not set</string>
+
 </resources>
