--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -39,6 +39,11 @@
         android:title="@string/status_bar_battery_show_percent_title"
         android:defaultValue="false" />
 
+    <PreferenceScreen
+        android:key="battery_bar_cat"
+        android:fragment="com.android.settings.graviton.BatteryBar"
+        android:title="@string/battery_bar_cat" />
+
     <ListPreference
         android:key="status_bar_signal"
         android:dialogTitle="@string/status_bar_signal_text_title"
