Nav bar height/width customization (2/2) Based on this commit: https://github.com/OmniKang/android_packages_apps_Settings/commit/624efe84e571b62e4506bcd376f1fcc176416259
Change-Id: I76dc223696b6e5cba5960b9c810f72c60f108c71

--- a/res/values/graviton_strings.xml
+++ b/res/values/graviton_strings.xml
@@ -19,6 +19,9 @@
     <!-- Graviton settings -->
     <string name="graviton_settings_title" >Graviton</string>
 
+    <!-- General -->
+    <string name="reset">Reset</string>
+
     <!-- Color Picker -->
     <string name="dialog_color_picker">Color Picker</string>
     <string name="press_color_to_apply">Press on Color to apply</string>
@@ -81,5 +84,22 @@
     <string name="battery_bar_thickness_title">Battery bar thickness</string>
     <string name="battery_bar_animate_title">Charging animation</string>
     <string name="battery_bar_animate_summary">Enable battery bar charge charge animation.</string>
+
+    <!-- Navigation bar -->
+    <string name="navbar_dimen_title">Dimensions</string>
+    <string name="navbar_dimensions_reset_message">Reset all dimensions entries to default?</string>
+    <string name="navigation_bar_height_title">Navigation bar height</string>
+    <string name="navigation_bar_height_summary">Navigation bar height while in portrait mode.</string>
+    <string name="navigation_bar_width_title">Navigation bar width</string>
+    <string name="navigation_bar_width_summary">Navigation bar width while in landscape mode.</string>
+    <string name="navigation_bar_size_42_dp_default">42 dp (default)</string>
+    <string name="navigation_bar_size_36_dp">36 dp</string>
+    <string name="navigation_bar_size_30_dp">30 dp</string>
+    <string name="navigation_bar_size_24_dp">24 dp</string>
+    <string name="navigation_bar_size_48_dp_default">48 dp (default)</string>
+    <string name="navigation_bar_size_44_dp">44 dp</string>
+    <string name="navigation_bar_size_40_dp">40 dp</string>
+    <string name="navigation_bar_size_42_dp">42 dp</string>
+    <string name="navigation_bar_size_0_dp">0 dp (off)</string>
 
 </resources>
