--- a/res/values/graviton_dimens.xml
+++ b/res/values/graviton_dimens.xml
@@ -22,4 +22,14 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!-- Navbar -->
+    <dimen name="navigation_bar_48">48dp</dimen>
+    <dimen name="navigation_bar_44">44dp</dimen>
+    <dimen name="navigation_bar_42">42dp</dimen>
+    <dimen name="navigation_bar_40">40dp</dimen>
+    <dimen name="navigation_bar_36">36dp</dimen>
+    <dimen name="navigation_bar_30">30dp</dimen>
+    <dimen name="navigation_bar_24">24dp</dimen>
+    <dimen name="navigation_bar_0">0dp</dimen>
+
 </resources>
