--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -65,6 +65,11 @@
                 android:title="@string/navigation_bar_title" />
 
         <PreferenceScreen
+            android:key="navigation_bar_dimen"
+            android:fragment="com.android.settings.graviton.NavBarDimen"
+            android:title="@string/navbar_dimen_title" />
+
+        <PreferenceScreen
                 android:key="navigation_ring"
                 android:fragment="com.android.settings.cyanogenmod.NavRing"
                 android:title="@string/navigation_ring_title" />
